@@ -2,6 +2,8 @@ Release ...
 * [nt]roff: The ".mk" request now accepts long register names.
 * [nt]roff: Using ".wh" with an undefined long macro name now works as with
   undefined short names; the macro is executed once it has been created.
+* troff/dpost: PostScript characters are now passed as "CPSname" in the
+  intermediate output (instead of "Nnnn").
 
 Release 051227
 * [nt]roff: A new extension level "3" is available. In this level, undefined
